SLPL-30 - [solplorer] Fix contrasts for a11y

--- a/solplorer/src/styles/globals.css
+++ b/solplorer/src/styles/globals.css
@@ -2,7 +2,8 @@
   /* Colors */
   /* --c-background: #2c2d30; */
   --c-background: #242933;
-  --c-danger: #ef4444;
+  /* --c-danger: #ef4444; */
+  --c-danger: #EB9093;
   /* --c-inset: #252629; */
   --c-inset: #2e3440;
   --c-foreground: #fff;
@@ -13,7 +14,8 @@
   --c-outset: #383f4d;
   --c-solana-green: #14F195;
   --c-solana-purple: #9945FF;
-  --c-success: #10b981;
+  /* --c-success: #10b981; */
+  --c-success: #a3be8c;
 
   --c-link: var(--c-primary);
 
